--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,11 @@
    <artifactId>hibernate-core</artifactId>
    <version>6.1.7.Final</version>
   </dependency>
+  <dependency>
+   <groupId>com.h2database</groupId>
+   <artifactId>h2</artifactId>
+   <version>2.1.214</version>
+  </dependency>
  </dependencies>
-    <name>exemplocrudpessoas</name>
+ <name>exemplocrudpessoas</name>
 </project>
