--- a/pom.xml
+++ b/pom.xml
@@ -15,17 +15,22 @@
   <dependency>
    <groupId>org.mariadb.jdbc</groupId>
    <artifactId>mariadb-java-client</artifactId>
-   <version>3.0.10</version>
+   <version>3.4.1</version>
   </dependency>
   <dependency>
    <groupId>org.hibernate</groupId>
    <artifactId>hibernate-core</artifactId>
-   <version>6.1.7.Final</version>
+   <version>6.6.1.Final</version>
   </dependency>
   <dependency>
    <groupId>com.h2database</groupId>
    <artifactId>h2</artifactId>
-   <version>2.1.214</version>
+   <version>2.3.232</version>
+  </dependency>
+  <dependency>
+   <groupId>org.reflections</groupId>
+   <artifactId>reflections</artifactId>
+   <version>0.10.2</version>
   </dependency>
  </dependencies>
  <name>exemplocrudpessoas</name>
